--- a/dashboard.html
+++ b/dashboard.html
@@ -71,7 +71,7 @@
             <a href="#" data-activates="mobile-demo" class="button-collapse" id="button-collapse"><i class="material-icons">menu</i></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li>
-                  <a href="school-page.html">My School</a>
+                  <a href="school-page.html" class="translate">My School</a>
                 </li>
                 <li>
                     <!-- <a id="user-name" href='profile-page.html' hidden>Username</a> -->
