--- a/school-page.html
+++ b/school-page.html
@@ -55,14 +55,17 @@
     <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 
-    <a style="color: white;" class="center-align translate" id="back-button" href="dashboard.html">Back to Conversations</a>
+    <a style="color: white; float: left; margin-left: 50px;" class="center-align translate" id="back-button" href="dashboard.html">
+      <i class="material-icons" style="vertical-align: bottom">arrow_back</i>
+      <span style="font-size: 15px">Back to Conversations</span>
+    </a>
 
     <!-- <p>Type your school code in here to see a list of options.</p>
     <input type="text" id="school-code-input"></input>
     <button id="search-button">Search</button> -->
 
 
-    <div id="options-container">
+    <div id="users-container">
 
     </div>
 
