Change bell styling

--- a/dashboard.html
+++ b/dashboard.html
@@ -133,7 +133,7 @@
               <span class="display-name"></span>
               <span class="local-time translate"></span>
               <span>
-                <a href="#bell-modal" id="bell" style='color:white;'>
+                <a href="#bell-modal" id="bell" class="btn-floating btn-small waves-effect waves-light red" style='color:white;vertical-align:bottom;'>
                   <i class="material-icons" style="font-size:25px;">notifications_active</i>
                 </a>
               </span>
