--- a/school-page.html
+++ b/school-page.html
@@ -65,7 +65,7 @@
     <button id="search-button">Search</button> -->
 
 
-    <div id="users-container">
+    <div id="users-container" style="clear: left">
 
     </div>
 
