--- a/dashboard.html
+++ b/dashboard.html
@@ -287,27 +287,18 @@
     <!-- bell-modal -->
     <div id="bell-modal" class="modal">
         <div class="modal-content translate">
+          <center>
             <h4>Are you sure you want to notify <span>name</span>?</h4>
-            <button id="send-notification" class="red lighten-1 btn waves-effect waves-light">
+            <button id="send-notification" class="red lighten-1 btn waves-effect waves-light" style="margin:20px">
               </span>Yes</span>
             </button>
-            <button class="modal-action modal-close red lighten-1 btn waves-effect waves-light">
+            <button class="modal-action modal-close red lighten-1 btn waves-effect waves-light" style="margin:20px">
               </span>No Thanks</span>
             </button>
-            <div id="send-notification-progress" class="progress" style="display:none;">
-               <div class="indeterminate"></div>
-            </div>
-            <!-- <div class="preloader-wrapper small active">
-              <div class="spinner-layer spinner-white-only">
-                <div class="circle-clipper left">
-                  <div class="circle"></div>
-                </div><div class="gap-patch">
-                  <div class="circle"></div>
-                </div><div class="circle-clipper right">
-                  <div class="circle"></div>
-                </div>
-              </div>
-            </div> -->
+          <center>
+          <div id="send-notification-progress" class="progress" style="display:none;">
+             <div class="indeterminate"></div>
+          </div>
         </div>
         <div class="modal-footer">
             <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat translate">Cancel</a>
