Added add conversation buttons to school page

--- a/dashboard.html
+++ b/dashboard.html
@@ -86,6 +86,7 @@
             <ul class="side-nav" id="mobile-demo">
                 <li>
                     <a id="sign-out-mobile">Sign-out</a>
+                    <a href="school-page.html" class="translate">My School</a>
                     <a href="account-info-sync.html?editProfile=true" class="translate">Edit Profile</a>
                     <a href="stat-summary.html" class="translate">View Stat Summary</a>
 
