--- a/school-page.html
+++ b/school-page.html
@@ -68,6 +68,17 @@
     <div id="users-container" style="clear: left">
 
     </div>
+    <!-- <div class="preloader-wrapper small active">
+      <div class="spinner-layer spinner-red-only">
+        <div class="circle-clipper left">
+          <div class="circle"></div>
+        </div><div class="gap-patch">
+          <div class="circle"></div>
+        </div><div class="circle-clipper right">
+          <div class="circle"></div>
+        </div>
+      </div>
+    </div> -->
 
     <!--This card and all the rest that follow are statistics about each individual conversation.
     Eventually, cards like these will be programatically generated.-->
@@ -90,6 +101,7 @@
         };
         firebase.initializeApp(config);
     </script>
+    <script src="scripts/command.js"></script>  
     <script src="scripts/pages/school-page.js"></script>
 
   </body>
