--- a/account-info-sync.html
+++ b/account-info-sync.html
@@ -41,45 +41,49 @@
 </head>
 
 <body>
-    <!-- Content goes in here -->
-    <div id="content" style="display:none;">
-      <div id='welcome-text'>
-        <h4 class="black-text">Welcome to WWB!</h5>
-        <h5 class="black-text">Please enter some information.</h5>
-      </div>
-      <div class="row">
-        <div class="input-field col s6">
-          <input value="" id="full-name" type="text" class="validate">
-          <label class="active" for="full-name">First Name</label>
-        </div>
-      </div>
 
-      <div class="row">
-        <div class="input-field col s6">
-          <input value="" id="email" type="text" class="validate">
-          <label class="active" for="email">Email</label>
-        </div>
-      </div>
+<h1>Site closed :(</h1>
 
-      <div class="row">
-        <div class="input-field col s6">
-          <input value="" id="school-code" type="text" class="validate">
-          <label class="active" for="school-code">School Code</label>
-        </div>
-      </div>
-
-        <a id='submit-button' class="waves-effect waves-light btn">Submit</a>
-        <div class="progress" id="progress-bar" style="display:none">
-          <div class="indeterminate"></div>
-        </div>
-
-
-      </div>
+<!-- Content goes in here -->
+<div id="content" style="display:none;">
+  <div id='welcome-text'>
+    <h4 class="black-text">Welcome to WWB!</h5>
+    <h5 class="black-text">Please enter some information.</h5>
+  </div>
+  <div class="row">
+    <div class="input-field col s6">
+      <input value="" id="full-name" type="text" class="validate">
+      <label class="active" for="full-name">First Name</label>
     </div>
+  </div>
+
+  <div class="row">
+    <div class="input-field col s6">
+      <input value="" id="email" type="text" class="validate">
+      <label class="active" for="email">Email</label>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="input-field col s6">
+      <input value="" id="school-code" type="text" class="validate">
+      <label class="active" for="school-code">School Code</label>
+    </div>
+  </div>
+
+    <a id='submit-button' class="waves-effect waves-light btn">Submit</a>
+    <div class="progress" id="progress-bar" style="display:none">
+      <div class="indeterminate"></div>
+    </div>
+
+
+  </div>
+</div>
 <!-- Firebase -->
 <script src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
+
 <script>
-  // Initialize Firebase
+// Initialize Firebase
   var config = {
     apiKey: "AIzaSyDLnL7hjfEVuQIuHVD8NA7shxlzItZviaw",
     authDomain: "worldwithoutwalls-f2d4b.firebaseapp.com",
@@ -89,9 +93,10 @@
     messagingSenderId: "517582843677"
   };
   firebase.initializeApp(config);
+
 </script>
-<script src="scripts/command.js"></script>
-<script src="scripts/pages/account-info-sync.js"></script>
+<!-- <script src="scripts/command.js"></script> -->
+<!-- <script src="scripts/pages/account-info-sync.js"></script> -->
 
 </body>
 
