--- a/user-agreement.html
+++ b/user-agreement.html
@@ -94,13 +94,14 @@
     <script>
       // Initialize Firebase
       var config = {
-        apiKey: "AIzaSyCx-2_5IcfXswoDZhjle1rPS3m-ryi3rpM",
-        authDomain: "penpalapp-6020c.firebaseapp.com",
-        databaseURL: "https://penpalapp-6020c.firebaseio.com",
-        storageBucket: "penpalapp-6020c.appspot.com",
-        messagingSenderId: "322094641122"
-      };
-      firebase.initializeApp(config);
+          apiKey: "AIzaSyDLnL7hjfEVuQIuHVD8NA7shxlzItZviaw",
+          authDomain: "worldwithoutwalls-f2d4b.firebaseapp.com",
+          databaseURL: "https://worldwithoutwalls-f2d4b.firebaseio.com",
+          projectId: "worldwithoutwalls-f2d4b",
+          storageBucket: "worldwithoutwalls-f2d4b.appspot.com",
+          messagingSenderId: "517582843677"
+        };
+        firebase.initializeApp(config);
     </script>
     <!-- <script src="scripts/pages/login.js"></script> -->
     <!-- <script src="scripts/bind-signin-button.js" buttonID='sign-in'></script> -->
