Disabled image button.

--- a/dashboard.html
+++ b/dashboard.html
@@ -166,7 +166,7 @@
                                 <span class="translate">Send</span>
                                 <i class="material-icons right">send</i>
                             </button>
-                    <button id="submitImage" class="btn waves-light waves-effect red lighten-1" title="Add an image.">
+                    <button id="submitImage" class="btn waves-light waves-effect red lighten-1" title="Add an image." disabled>
                                 <i class="material-icons center">image</i>
                             </button>
                 </form>
