Re-enabled index and account-info-sync

--- a/account-info-sync.html
+++ b/account-info-sync.html
@@ -42,7 +42,7 @@
 
 <body>
 
-<h1>Site closed :(</h1>
+<!-- <h1>Site closed :(</h1> -->
 
 <!-- Content goes in here -->
 <div id="content" style="display:none;">
@@ -95,8 +95,8 @@
   firebase.initializeApp(config);
 
 </script>
-<!-- <script src="scripts/command.js"></script> -->
-<!-- <script src="scripts/pages/account-info-sync.js"></script> -->
+<script src="scripts/command.js"></script>
+<script src="scripts/pages/account-info-sync.js"></script>
 
 </body>
 
